--- a/StatsBYUI/inst/rmarkdown/templates/math_325/skeleton/skeleton.RMD
+++ b/StatsBYUI/inst/rmarkdown/templates/math_325/skeleton/skeleton.RMD
@@ -2,7 +2,7 @@
 title: "Analysis Title Here"
 author: "Your Name Here"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: Math325::math325_analysis
+output: StatsBYUI::math325_analysis
 ---
 
 ```{r load_library, include=FALSE}
