--- a/StatsBYUI/inst/rmarkdown/templates/math_335/skeleton/skeleton.Rmd
+++ b/StatsBYUI/inst/rmarkdown/templates/math_335/skeleton/skeleton.Rmd
@@ -2,15 +2,7 @@
 title: "Analysis Title Here"
 author: "Your Name Here"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: 
-  html_document: 
-    code_folding: hide
-    keep_md: yes
-    fig_height: 6
-    fig_width: 12
-    fig_align: 'center'
-    warning: FALSE
-    message: FALSE
+output: StatsBYUI::math335_analysis
 ---
 
 ```{r load_libraries, include = FALSE}
