--- a/StatsBYUI/inst/rmarkdown/templates/math_325/skeleton/skeleton.RMD
+++ b/StatsBYUI/inst/rmarkdown/templates/math_325/skeleton/skeleton.RMD
@@ -7,7 +7,8 @@ output: StatsBYUI::math325_analysis
 
 ```{r load_library, include=FALSE}
 # Use this R-Chunk to load your libraries!
-# library(mosaic)
+library(mosaic)
+
 ```
 
 ```{r load_data, include=FALSE}
