--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -11,7 +11,7 @@ $endif$
 \usepackage{mathtools}
 \usepackage{tikz-qtree}
 \usepackage{wasysym}
-
+\usepackage{tcolorbox}
 \newcommand\Myperm[2][^n]{\prescript{#1\mkern-2.5mu}{}P_{#2}}
 \newcommand\Mycomb[2][^n]{\prescript{#1\mkern-0.5mu}{}C_{#2}}
 
@@ -21,6 +21,17 @@ $endif$
 \newcommand{\probun}[2]{P(#1 \cup #2)}
 \newcommand{\conprob}[2]{P(#1 | #2)}
 \newcommand{\bayes}[2]{\frac{P(#2 | #1)P(#1)}{P(#2)}}
+
+%
+% Homework Details
+%   - Title
+%   - Due date
+%   - Class
+%   - Section/Time
+%   - Instructor
+%   - Author
+%
+
 
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
@@ -237,21 +248,42 @@ $for(header-includes)$
 $header-includes$
 $endfor$
 
-$if(title)$
-\title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
-$endif$
-$if(subtitle)$
-\providecommand{\subtitle}[1]{}
-\subtitle{$subtitle$}
-$endif$
-$if(author)$
-\author{$for(author)$$author$$sep$ \and $endfor$}
-$endif$
-$if(institute)$
-\providecommand{\institute}[1]{}
-\institute{$for(institute)$$institute$$sep$ \and $endfor$}
-$endif$
-\date{$date$}
+% $if(title)$
+% \title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
+% $endif$
+% $if(subtitle)$
+% \providecommand{\subtitle}[1]{}
+% \subtitle{$subtitle$}
+% $endif$
+% $if(author)$
+% \author{$for(author)$$author$$sep$ \and $endfor$}
+% $endif$
+% $if(institute)$
+% \providecommand{\institute}[1]{}
+% \institute{$for(institute)$$institute$$sep$ \and $endfor$}
+% $endif$
+% \date{$date$}
+
+\newcommand{\hmwkTitle}{$title$}
+\newcommand{\hmwkDueDate}{$due$}
+\newcommand{\hmwkClass}{$class$}
+\newcommand{\hmwkClassTime}{- Section 01}
+\newcommand{\hmwkClassInstructor}{Professor Craig Johnson}
+\newcommand{\hmwkAuthorName}{\textbf{$author$}}
+
+%
+% Title Page
+%
+
+\title{
+    \vspace{2in}
+    \textmd{\textbf{\hmwkClass:\ \hmwkTitle}}\\
+    \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate\ at 8:00am}\\
+    \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}} \\
+    \vspace{0.1in}\large{\textbf{\hmwkAuthorName}}
+    \vspace{3in}
+}
+
 
 \usepackage{fancyhdr}
 \usepackage{lastpage}
@@ -265,13 +297,16 @@ $endif$
 \fancypagestyle{firststyle}
 {
    \fancyhf{}
-   \fancyhead[C]{\raisebox{5ex}{\small $time$}}
+   \fancyhead[C]{\raisebox{5ex}{\small $topic$}}
    \fancyhead[LO,LE]{\small $title$ \\ $questions$}
    \fancyhead[RE,RO]{\small $author$ \\ $class$ \\ $date$}
 }
 \pagestyle{fullstyle}
 
 \begin{document}
+\maketitle
+\thispagestyle{empty}
+\pagebreak
 \thispagestyle{firststyle}
 \vskip 13.5pt\relax \normalsize\fontsize{11}{12}
 $if(abstract)$
