--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/skeleton/skeleton.Rmd
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/skeleton/skeleton.Rmd
@@ -1,17 +1,16 @@
 ---
-title: "HW #"
+title: "Homework Title"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-author: McDowell, Dylan
-class: "Class"
-time: "Corrections"
+author: Dylan McDowell
+class: "Class #Num"
+topic: "Section x.x"
 questions: |
-  | 1, 2, 3, 4, 5, 
-  | 6, 7, 8, 9, 10, 11
+  | 1, 2, 3, 4, 5
+due: "date"
 geometry: margin=1in, headsep=.5in
 fontfamily: mathpazo
 fontsize: 11pt
 graphics: yes
 output: HomeworkBYUI::homework_pdf
 ---
-
 # Problem 1
