--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -268,7 +268,7 @@ $endfor$
 \newcommand{\hmwkDueDate}{$due$}
 \newcommand{\hmwkClass}{$class$}
 \newcommand{\hmwkClassTime}{- Section 01}
-\newcommand{\hmwkClassInstructor}{Professor Craig Johnson}
+\newcommand{\hmwkClassInstructor}{Professor $professor$}
 \newcommand{\hmwkAuthorName}{\textbf{$author$}}
 
 %
@@ -278,7 +278,7 @@ $endfor$
 \title{
     \vspace{2in}
     \textmd{\textbf{\hmwkClass:\ \hmwkTitle}}\\
-    \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate\ at 8:00am}\\
+    \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate}\\
     \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}} \\
     \vspace{0.1in}\large{\textbf{\hmwkAuthorName}}
     \vspace{3in}
@@ -298,7 +298,7 @@ $endfor$
 {
    \fancyhf{}
    \fancyhead[C]{\raisebox{5ex}{\small $topic$}}
-   \fancyhead[LO,LE]{\small $title$ \\ $questions$}
+   \fancyhead[LO,LE]{\small $title$ \\ $misc$}
    \fancyhead[RE,RO]{\small $author$ \\ $class$ \\ $date$}
 }
 \pagestyle{fullstyle}
