--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -100,9 +100,9 @@ $if(listings)$
 \usepackage{listings}
 $endif$
 
-$if(lhs)$
-\lstnewenvironment{code}{\lstset{language=Haskell,basicstyle=\small\ttfamily}}{}
-$endif$
+% $if(lhs)$
+% \lstnewenvironment{code}{\lstset{language=Haskell,basicstyle=\small\ttfamily}}{}
+% $endif$
 
 $if(highlighting-macros)$
 $highlighting-macros$
@@ -157,24 +157,6 @@ $else$
 \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
 $endif$
-
-% $if(dir)$
-% \ifxetex
-%   % load bidi as late as possible as it modifies e.g. graphicx
-%   $if(latex-dir-rtl)$
-%   \usepackage[RTLdocument]{bidi}
-%   $else$
-%   \usepackage{bidi}
-%   $endif$
-% \fi
-% \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-%   \TeXXeTstate=1
-%   \newcommand{\RL}[1]{\beginR #1\endR}
-%   \newcommand{\LR}[1]{\beginL #1\endL}
-%   \newenvironment{RTL}{\beginR}{\endR}
-%   \newenvironment{LTR}{\beginL}{\endL}
-% \fi
-% $endif$
 
 % set default figure placement to htbp
 \makeatletter
