--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -75,7 +75,7 @@ $endif$
 \hypersetup{pdftitle={$title$},
             pdfauthor={$author$},
             pdfkeywords={$class$},
-            colorlinks=true, linkcolor=blue, citecolor=blue, urlcolor=blue,
+            colorlinks=true, linkcolor=blue, citecolor=black, urlcolor=blue,
             breaklinks=true}
 
 \urlstyle{same}  % don't use monospace font for urls
