--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -179,7 +179,9 @@ $endif$
 \pagestyle{fullstyle}
 
 \begin{document}
+$if(title-page)$
 \maketitle
+$endif$
 \thispagestyle{empty}
 \pagebreak
 \thispagestyle{firststyle}
