--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/skeleton/skeleton.Rmd
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/skeleton/skeleton.Rmd
@@ -7,6 +7,7 @@ professor: "Professor Name"
 due: "date"
 topic: "Chapter x.x"
 misc: "i.e. X Points Possible"
+title-page: yes
 output: HomeworkBYUI::homework_pdf
 ---
 # Problem 1
