--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -179,6 +179,7 @@ $endif$
 \pagestyle{fullstyle}
 
 \begin{document}
+
 $if(title-page)$
 \maketitle
 \thispagestyle{empty}
@@ -186,7 +187,7 @@ $if(title-page)$
 \pagenumbering{arabic}
 $endif$
 
-\pagebreak
+%\pagebreak
 \thispagestyle{firststyle}
 \vskip 13.5pt\relax \normalsize\fontsize{11}{12}
 
