--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -187,10 +187,9 @@ $if(title-page)$
 \pagenumbering{arabic}
 $endif$
 
-\thispagestyle{firststyle}
+%\thispagestyle{firststyle}
 %\vskip 2pt\relax \normalsize\fontsize{11}{12}
 
 $body$
-
 
 \end{document}
