--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -187,8 +187,7 @@ $if(title-page)$
 \pagenumbering{arabic}
 $endif$
 
-%\thispagestyle{firststyle}
-%\vskip 2pt\relax \normalsize\fontsize{11}{12}
+\thispagestyle{firststyle}
 
 $body$
 
