Space removed from title

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -149,7 +149,7 @@ $endif$
 
 \title{
     \vspace{2in}
-    \textmd{\textbf{\hmwkClass: \ \hmwkTitle}}\\
+    \textmd{\textbf{\hmwkClass: \hmwkTitle}}\\
     \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate}\\
     \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}} \\
     \vspace{0.1in}\large{\textbf{\hmwkAuthorName}}
