--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -146,6 +146,7 @@ $endif$
     \ifnum#1>0
         \setcounter{homeworkProblemCounter}{#1}
     \fi
+    \section{Problem \arabic{homeworkProblemCounter}}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
