--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -21,6 +21,7 @@
 \documentclass[11pt, letterpaper]{article}
 \usepackage[T1]{fontenc}
 \usepackage[margin=1in, headsep=.5in]{geometry}
+\usepackage{extramarks}
 
 \usepackage{graphicx,grffile}
 \makeatletter
