multicol package added

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -50,6 +50,7 @@
 \usepackage{lastpage}
 \usepackage{titlesec}
 \usepackage{enumitem}
+\usepackage{multicol}
 
 \newcommand{\mathcolorbox}[2]{\colorbox{#1}{$$\displaystyle #2$$}}
 \newcommand\proba{P(A)}
