multicol package added

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -53,6 +53,7 @@
 \usepackage{multicol}
 \usepackage{amssymb}
 \usepackage{enumitem}
+\usepackage{tasks}
 
 \newcommand{\mathcolorbox}[2]{\colorbox{#1}{$$\displaystyle #2$$}}
 \newcommand\proba{P(A)}
