--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -196,7 +196,7 @@ $endif$
 % Set Task Formatting
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \DeclareInstance{tasks}{alphabetize-parens}{default}{
-  counter-format = { \textbf{(tsk[a])} }
+  counter-format = { (tsk[a]) }
 }
 
 \settasks{style=alphabetize-parens}
