--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -54,6 +54,7 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 \usepackage{tasks}
+\usepackage{mathrsfs}
 
 \newcommand{\mathcolorbox}[2]{\colorbox{#1}{$$\displaystyle #2$$}}
 \newcommand\proba{P(A)}
