--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -182,6 +182,23 @@ $endif$
    \fancyhead[RE,RO]{\small $author$ \\ $class$ \\ $date$}
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Set Task Formatting
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\DeclareInstance{tasks}{alphabetize-parens}{default}{
+  counter-format = { (tsk[a]) }
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Solution Environment
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newenvironment{solution}
+{
+\textbf{Solution:}\\
+\begin{tcolorbox}
+
+\end{tcolorbox
+}
 \pagestyle{fullstyle}
 
 \begin{document}
@@ -193,12 +210,7 @@ $if(title-page)$
 \pagenumbering{arabic}
 $endif$
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Set Task Formatting
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\DeclareInstance{tasks}{alphabetize-parens}{default}{
-  counter-format = { (tsk[a]) }
-}
+
 
 \settasks{style=alphabetize-parens}
 
