--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -197,8 +197,9 @@ $endif$
 \textbf{Solution:}\\
 \begin{tcolorbox}
 
-\end{tcolorbox
+\end{tcolorbox}
 }
+
 \pagestyle{fullstyle}
 
 \begin{document}
