--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -193,12 +193,9 @@ $endif$
 % Solution Environment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newenvironment{solution}
-{
-\textbf{Solution:}\\
-\begin{tcolorbox}
+  {\textbf{Solution:}\\ \begin{tcolorbox}}
+  {\end{tcolorbox}}
 
-\end{tcolorbox}
-}
 
 \pagestyle{fullstyle}
 
