--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -193,7 +193,7 @@ $endif$
 % Solution Environment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newenvironment{solution}
-  {\textbf{Solution:}\\ \begin{tcolorbox}}
+  {\textbf{Solution:} \begin{tcolorbox}}
   {\end{tcolorbox}}
 
 
