--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -20,8 +20,9 @@
 %
 \documentclass[11pt, letterpaper]{article}
 \usepackage[T1]{fontenc}
+\usepackage{tgtermes} % font
 \usepackage[margin=1in, headsep=.35in]{geometry}
-\usepackage{extramarks}
+
 
 \usepackage{graphicx,grffile}
 \makeatletter
@@ -55,6 +56,7 @@
 \usepackage{enumitem}
 \usepackage{tasks}
 \usepackage{mathrsfs}
+\usepackage{extramarks}
 
 \newcommand{\mathcolorbox}[2]{\colorbox{#1}{$$\displaystyle #2$$}}
 \newcommand\proba{P(A)}
