--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -20,7 +20,7 @@
 %
 \documentclass[11pt, letterpaper]{article}
 \usepackage[T1]{fontenc}
-\usepackage{tgtermes} % font
+\usepackage{mathptmx} % font
 \usepackage[margin=1in, headsep=.35in]{geometry}
 
 
