--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -39,7 +39,7 @@
 \makeatother
 
 \usepackage{tikz}
-\usetikzlibrary{positioning, calc}
+\usetikzlibrary{positioning, calc, fit}
 \usetikzlibrary{shapes,backgrounds}
 \usepackage{xcolor}
 \usepackage{soul}
