--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -58,6 +58,8 @@
 \usepackage{mathrsfs}
 \usepackage{extramarks}
 \usepackage{subcaption}
+\usepackage{array}
+\usepackage{tabularx}
 
 \newcommand{\mathcolorbox}[2]{\colorbox{#1}{$$\displaystyle #2$$}}
 \newcommand\proba{P(A)}
