--- a/StatsPresentation/inst/rmarkdown/templates/report/resources/beamer.tex
+++ b/StatsPresentation/inst/rmarkdown/templates/report/resources/beamer.tex
@@ -210,7 +210,7 @@ $endfor$
 %----------------------------------------------------------------------------------
 \institute{BYU-Idaho}
 
-\titlegraphic{\includegraphics[width=0.2\paperwidth]{./byuilogo.png}}
+\titlegraphic{\includegraphics[width=0.2\paperwidth]{byuilogo}}
 
 % Some additional title page adjustments.
 %----------------------------------------
