--- a/StatsPresentation/inst/rmarkdown/templates/report/resources/beamer.tex
+++ b/StatsPresentation/inst/rmarkdown/templates/report/resources/beamer.tex
@@ -209,7 +209,7 @@ $endfor$
 % Do feel free to change the titlegraphic if you don't want it as a Markdown field.
 %----------------------------------------------------------------------------------
 \institute{BYU-Idaho}
-\titlegraphic{\includegraphics[width=0.2\paperwidth]{\string ./byuilogo.png}}
+%\titlegraphic{\includegraphics[width=0.2\paperwidth]{\string ./byuilogo.png}}
 
 % Some additional title page adjustments.
 %----------------------------------------
