--- a/StatsPresentation/inst/rmarkdown/templates/report/resources/beamer.tex
+++ b/StatsPresentation/inst/rmarkdown/templates/report/resources/beamer.tex
@@ -209,8 +209,7 @@ $endfor$
 % Do feel free to change the titlegraphic if you don't want it as a Markdown field.
 %----------------------------------------------------------------------------------
 \institute{BYU-Idaho}
-\write18{wget https://www.isu.edu/media/libraries/army-rotc/BYUI-Logo.jpg}
-\titlegraphic{\includegraphics[width=0.2\paperwidth]{BYUI-Logo.jpg}}
+\titlegraphic{\includegraphics[width=0.2\paperwidth]{$logo$}}
 
 % Some additional title page adjustments.
 %----------------------------------------
