--- a/StatsPresentation/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/StatsPresentation/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -3,6 +3,7 @@ title: "Bayesian Statistics"
 subtitle: "Test Review"
 author: "Craig Johnson"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
+resources: '`r system.file("rmarkdown/templates/report/resources/",package = "StatsPresentation")`'
 output: 
   StatsPresentation::stats_presentation: default
   pdf_document: default
