--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/skeleton/skeleton.Rmd
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/skeleton/skeleton.Rmd
@@ -3,6 +3,8 @@ title: "Homework Title"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 author: "Dylan McDowell"
 class: "Course Code"
+section: "01"
+hours: "1.5 Hours"
 professor: "Professor Name"
 due: "date"
 topic: "Chapter x.x"
