changes to template

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -183,9 +183,8 @@ $endif$
 \fancypagestyle{firststyle}
 {
    \fancyhf{}
-   %\fancyhead[C]{\raisebox{5ex}{\small $topic$}}
+   \fancyhead[C]{\raisebox{5ex}{\small $hours$}}
    \fancyhead[LO,LE]{\small $title$ \\ $topic$ \\ $misc$}
-   \fancyhead[C]{\small $hours$}
    \fancyhead[RE,RO]{\small $author$ \\ $class$-$section$ \\ $date$}
 }
 
