changes to template

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -185,7 +185,7 @@ $endif$
    \fancyhf{}
    \fancyhead[C]{\raisebox{5ex}{\small $hours$}}
    \fancyhead[LO,LE]{\small $title$ \\ $topic$ \\ $misc$}
-   \fancyhead[RE,RO]{\small $author$ \\ $class$-$section$ \\ $date$}
+   \fancyhead[RE,RO]{\small $author$ \\ $class$-$section$ \\ $due$}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
