changes to template

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -201,7 +201,7 @@ $endif$
 % Solution Environment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newenvironment{solution}
-  {\textbf{Solution:} \begin{tcolorbox}}
+  {\textbf{Solution:} \begin{tcolorbox}[title=Solution,colback=white]}
   {\end{tcolorbox}}
 
 
