changes to template

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -204,7 +204,7 @@ $endif$
   {\begin{tcolorbox}[title=Solution:,colback=white]}
   {\end{tcolorbox}}
 
-\newcommand{\exercise}[1]{\section{\underline{Exercise #1}}}
+\newcommand{\exer}[1]{\section{\underline{Exercise #1}}}
 
 
 \pagestyle{fullstyle}
