changes to template

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -201,11 +201,8 @@ $endif$
 % Solution Environment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newenvironment{solution}
-  {\begin{tcolorbox}[title=Solution:,colback=white]}
+  {\begin{tcolorbox}[title=Solution:,colback=white, fonttitle=\small\bfseries]}
   {\end{tcolorbox}}
-
-\newcommand{\exer}[1]{\section{\underline{Exercise #1}}}
-
 
 \pagestyle{fullstyle}
 
