changes to template

--- a/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/homework/resources/homework_template.tex
@@ -204,6 +204,8 @@ $endif$
   {\begin{tcolorbox}[title=Solution:,colback=white, fonttitle=\small\bfseries]}
   {\end{tcolorbox}}
 
+\newcommand{\exercise}[1]{\section{\underline{Exercise #1}}}
+
 \pagestyle{fullstyle}
 
 \begin{document}
